--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					Promo Kelas Anak
 				</div>
 			</a>
-			<a href="kids-play.html" target="">
+			<a href="action-class.html" target="">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
 					Promo Kelas Online
 				</div>
