--- a/index.html
+++ b/index.html
@@ -61,19 +61,24 @@
 			
 		</div>
 		<div class="grid place-items-center max-w-screen">
+			<a href="https://dialogika.co/event" target="">
+				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
+					Workshop Offline: Interview Preparation
+				</div>
+			</a>
 			<a href="kids-play.html" target="">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
 					Promo Kelas Anak
 				</div>
 			</a>
-			<a href="action-class.html" target="">
+			<a href="https://dialogika.co/landing" target="">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
 					Promo Kelas Online
 				</div>
 			</a>
 			<a href="jakarta-class.html" target="_blank">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
-					Promo Offline Class Jakarta
+					Offline Class Jakarta
 				</div>
 			</a>
 			<hr/>
