--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet" />
 <script src="https://cdn.tailwindcss.com"></script>
-<script>
-	tailwind.config = {
-	    theme: {
-	    extend: {
-	        fontFamily: {
-	        inter: ["Inter", "sans-serif"],
-	        },
-	        screens: {
-	        sm: "400px",
-	        },
-	    },
-	    },
-	};
-</script>
+  <script>
+  	tailwind.config = {
+  	    theme: {
+  	    extend: {
+  	        fontFamily: {
+  	        inter: ["Inter", "sans-serif"],
+  	        },
+  	        screens: {
+  	        sm: "400px",
+  	        },
+  	    },
+  	    },
+  	};
+  </script>
 
 <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -57,13 +57,13 @@
 	<section>
 		<div class="grid place-items-center text-center py-14">
 			<img class="" src="assets/img/white-logo.png" alt="Logo Dialogika" style="max-height:34px;" />
-			<h1 class="text-lg mb-3"><b>Kelas Public Speaking</b></h1>
+			<h1 class="text-lg mb-3"><b>Kelas Public Speaking <br>dan Pengembangan Diri</b></h1>
 			
 		</div>
 		<div class="grid place-items-center max-w-screen">
 			<a href="https://dialogika.co/event" target="">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
-					Workshop Offline: Interview Preparation
+					Workshop Offline: Lolos Interview Kerja
 				</div>
 			</a>
 			<a href="kids-play.html" target="">
@@ -71,7 +71,7 @@
 					Promo Kelas Anak
 				</div>
 			</a>
-			<a href="https://dialogika.co/landing" target="">
+			<a href="https://dialogika.co/page" target="_blank">
 				<div class="bg-slate-700 p-3 m-2 rounded-lg sm:w-[384px] w-[272px] hover:scale-110 active:scale-105 transition hover:bg-slate-500 flex justify-center">
 					Promo Kelas Online
 				</div>
