--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#contact-modal" style="background-color: #009961;" data-bs-toggle="modal" class="back-to-top d-flex align-items-center justify-content-center">
+  <a href="#features" style="background-color: #009961;" class="back-to-top d-flex align-items-center justify-content-center">
     <i class='bx bxl-whatsapp bx-tada' style="max-height:60px;"></i>
   </a>
 
