--- a/index2.html
+++ b/index2.html
@@ -481,7 +481,7 @@
 
 				<p>
 					<i class="icon ion-ios-telephone"></i> <strong>Phone :</strong> <a href="wa.me/6285162992597" class="phone-mail-link">(+62) 851-6299-2597</a> <br>
-					<i class="icon ion-ios-email"></i> <strong>Email :</strong> <a href="mailto:admin@dialogika.co" class="phone-mail-link">admin@dialogika.co</a> <br>
+					<i class="icon ion-ios-email"></i> <strong>Email :</strong> <a href="mailto:hello@dialogika.co" class="phone-mail-link">hello@dialogika.co</a> <br>
 					<i class="icon ion-ios-location"></i> <strong>Location :</strong> 
 						Jl. Werkudoro, Tegalrejo, Jadan, Kasihan, Bantul, Special Region of Yogyakarta, 55184
 				</p>
