--- a/jakarta-class.html
+++ b/jakarta-class.html
@@ -160,7 +160,7 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex justify-content-between">
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope"></i> <a href="mailto:admin@dialogika.co">admin@dialogika.co</a>
+        <i class="bi bi-envelope"></i> <a href="mailto:hello@dialogika.co">hello@dialogika.co</a>
         <i class="bi bi-phone"></i> <a href="https://link.dialogika.co/wasap-2597-dialogika-co">+62 851-6299-2597</a>
       </div>
       <div class="d-none d-lg-flex social-links align-items-center">
@@ -1017,7 +1017,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Contact</h3>
-                  <p>admin@dialogika.co<br></p>
+                  <p>hello@dialogika.co<br></p>
                 </div>
               </div>
               <div class="col-md-6" >
