--- a/basic-plus-2023.html
+++ b/basic-plus-2023.html
@@ -963,7 +963,7 @@
                 <a href="private-online.html">Private Class</a>
               </li>
               <li><i class="bx bx-chevron-right"></i> 
-                <a href="presentation-class.html">Presentation</a>
+                <a href="https://dialogika.co/corporate">Corporate Class</a>
               </li>
               <li><i class="bx bx-chevron-right"></i> 
                 <a href="subscribe/kids-play">Kids Class</a>
