--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           type:"post",
           data:$("#subcriptions").serializeArray(),
           success: function(){
-            $('#subcription-modal').modal('show');
+            window.location.href = "https://link.dialogika.co/open-whatsapp-group";
           },
           error: function(){
             alert("There was an error :(")
