--- a/basic-plus-2023.html
+++ b/basic-plus-2023.html
@@ -975,7 +975,7 @@
             <h4>All About Dialogika</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> 
-                <a href="https://dialogika.co/about/about-us.html">About Dialogika</a>
+                <a href="https://dialogika.co/about">About Dialogika</a>
               </li>
               <li><i class="bx bx-chevron-right"></i> 
                 <a href="https://dialogika/intern">Intern Dialogika</a>
@@ -987,7 +987,7 @@
                 <a href="https://dialogika.co/about/faq.html">FAQ Dialogika</a>
               </li>
               <li><i class="bx bx-chevron-right"></i> 
-                <a href="https://instagram.com/dialogika.co">Instagram Dialogika</a>
+                <a href="https://dialogika.co/mentor">Mentor Dialogika</a>
               </li>
             </ul>
           </div>
