--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         </div>
         <div class="row gy-4">
           <div class="col-lg-6 col-md-6 m-b30 wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.3s">
-            <a href="https://dialogika.co/promo/kids-play.html" class="category-box dlab-box">
+            <a href="https://dialogika.co/page/pelatihan-public-speaking-anak" class="category-box dlab-box">
               <div class="dlab-media dlab-img-effect zoom">
                 <img src="https://dialogika.co/promo/assets/img/program/kids-pl/hero.jpg" alt="">
                 <div class="top-lefts"><span class="badge rounded-pill rounded-red">Hot Program</span></div>
@@ -388,7 +388,7 @@
             </a>
           </div>
           <div class="col-lg-3 col-md-6 m-b30 wow fadeInUp" >
-            <a href="https://dialogika.co/promos/basic.html" class="category-box dlab-box">
+            <a href="https://dialogika.co/page/pelatihan-public-speaking-online" class="category-box dlab-box">
               <div class="dlab-media dlab-img-effect zoom">
                 <img src="https://dialogika.co/promos/assets/img/hero-5.jpg" alt="">
                 <div class="top-lefts"><span class="badge rounded-pill rounded-green">Best Choice</span></div>
