--- a/index.html
+++ b/index.html
@@ -513,9 +513,15 @@
 
   <main id="main">
 
+    
+
     <!-- ======= Courses Category ======= -->
     <section class="section-full content-inner section-bg" id="favorite">
       <div class="container">
+        <div class="alert alert-danger alert-dismissible fade show" style="margin-bottom: 50px;margin-top: -10px;" role="alert">
+            Open Recruitment: Mentor & Team Dialogika <b><u><a href="https://dialogika.co/career" target="__blank" class="alert-link">KLIK LINK INI</a></u></b> untuk info lebih lanjut.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <div class="row justify-content-between">
           <div class="col-xl-6 col-lg-8 col-md-8 col-12">
             <div class="section-title">
