--- a/index.html
+++ b/index.html
@@ -513,6 +513,126 @@
 
   <main id="main">
 
+    <!--Start Course Details-->
+    <section class="course-details">
+      <div class="container">
+        <div class="row">
+          <!--Start Course Details Content-->
+          <div class="col-xl-8 col-lg-8">
+            <div class="course-details__content">
+
+                <!--Start Course Details Reviews-->
+                <div class="course-details__reviews" style="margin-top: 0px;">
+                    <div class="section-title">
+                      <h2 class="kiri text-start">Review</h2>
+                      <p class="kiri text-start">Testimonial</p>
+                    </div>
+                    <div class="course-details__progress-review">
+                        <div class="row">
+                            <div class="col-xl-7 col-lg-7 col-md-7">
+                                <div class="course-details__progress clearfix">
+                                    <div class="course-details__progress-item">
+                                        <p class="course-details__progress-text">Excellent</p>
+                                        <div class="course-details__progress-bar">
+                                            <span style="width: 97%;"></span>
+                                        </div>
+                                        <p class="course-details__progress-count">163</p>
+                                    </div>
+
+                                    <div class="course-details__progress-item">
+                                        <p class="course-details__progress-text">Very Good</p>
+                                        <div class="course-details__progress-bar">
+                                            <span style="width: 3%;"></span>
+                                        </div>
+                                        <p class="course-details__progress-count">7</p>
+                                    </div>
+
+                                    <div class="course-details__progress-item">
+                                        <p class="course-details__progress-text">Average</p>
+                                        <div class="course-details__progress-bar">
+                                            <span style="width: 1%;"></span>
+                                        </div>
+                                        <p class="course-details__progress-count">1</p>
+                                    </div>
+
+                                    <div class="course-details__progress-item">
+                                        <p class="course-details__progress-text">Poor</p>
+                                        <div class="course-details__progress-bar">
+                                            <span style="width: 0%;"></span>
+                                        </div>
+                                        <p class="course-details__progress-count">0</p>
+                                    </div>
+
+                                    <div class="course-details__progress-item">
+                                        <p class="course-details__progress-text">Terrible</p>
+                                        <div class="course-details__progress-bar">
+                                            <span style="width: 0%;" ></span>
+                                        </div>
+                                        <p class="course-details__progress-count">0</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-5 col-lg-5 col-md-5">
+                                <div class="course-details__review-box">
+                                    <h2 class="course-details__review-count">4.9</h2>
+                                    <div class="course-details__review-stars">
+                                        <i class="fas fa-star"></i><!-- /.fas fa-star -->
+                                        <i class="fas fa-star"></i><!-- /.fas fa-star -->
+                                        <i class="fas fa-star"></i><!-- /.fas fa-star -->
+                                        <i class="fas fa-star"></i><!-- /.fas fa-star -->
+                                        <i class="fas fa-star"></i><!-- /.fas fa-star -->
+                                    </div>
+                                    <p class="course-details__review-text">171 reviews <br><a href="https://goo.gl/maps/NassRAbBA1ETFweJ6" target="__blank">Google Maps:<br>Oct 10, 2023</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!--End Course Details Reviews-->
+
+            </div>
+          </div>
+          <!--End Course Details Content-->
+
+          <!--Start Course Details Sidebar-->
+          <div class="col-xl-4 col-lg-4"><br/>
+            <div class="course-details__sidebar">
+                <div class="course-details__price wow fadeInUp animated" data-wow-delay="0.1s">
+                    <h2 class="course-details__price-amount">FAVORITE CLASS</h2>
+                    <div class="course-details__price-btn">
+                        <a href="#favorite" class="blue-btn">Bulan Ini</a>
+                    </div>
+                </div>
+
+                <div class="course-details__sidebar-meta wow fadeInUp animated" data-wow-delay="0.3s">
+                    <ul class="course-details__sidebar-meta-list list-unstyled">
+                        <li class="course-details__sidebar-meta-list-item">
+                            <div class="icon">
+                                <a href=""><i class='bx bx-time-five' ></i></a>
+                            </div>
+                            <div class="text">
+                                <p><a href="#firstc">Offline:<span> First Class</span></a></p>
+                            </div>
+                        </li>
+
+                        <li class="course-details__sidebar-meta-list-item">
+                            <div class="icon">
+                                <a href="#basicp"><i class='bx bx-folder-open' ></i></a>
+                            </div>
+                            <div class="text">
+                                <p><a href="#">Online:<span> Basic Plus</span></a></p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+          </div>
+          <!--End Course Details Sidebar-->
+        </div>
+      </div>
+    </section><!--End Course Details-->
+
     <!-- ======= Courses Category ======= -->
     <section class="section-full content-inner section-bg" id="favorite">
       <div class="container">
@@ -538,7 +658,7 @@
           </div>
           <div class="row gy-4">
             <div class="col-lg-6 col-md-6 m-b30">
-              <a href="../program/basic-plus.html" class="category-box dlab-box">
+              <a href="../program/basic-plus.html" class="category-box dlab-box" id="basicp">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://g.foolcdn.com/editorial/images/702742/consumer-reviews-information-online.jpg?width=165"
@@ -554,7 +674,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 m-b30">
-              <a href="../page/harga-kelas-public-speaking-anak/" class="category-box dlab-box">
+              <a href="../page/harga-kelas-public-speaking-anak/" class="category-box dlab-box" id="kidsc">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://awsimages.detik.net.id/community/media/visual/2023/02/20/ilustrasi-peran-bahasa-ibu-untuk-anak-1_169.jpeg?w=300&q="
@@ -570,7 +690,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 m-b30">
-              <a href="../program/first-class.html" class="category-box dlab-box">
+              <a href="../program/first-class.html" class="category-box dlab-box" id="firstc">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://www.nshcoa.com/content/uploads/2022/12/iStock-1324197549-2048x1365.jpg"
