--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
   <main id="main">
 
     <!--Start Course Details-->
-    <section class="course-details">
+    <section class="course-details" style="background-color: #f1f7fd;">
       <div class="container">
         <div class="row">
           <!--Start Course Details Content-->
