--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Promo Kelas Public Speaking | Dialogika</title>
-  <meta content="Pelatihan kelas public speaking jogja, selama 1 bulan hingga 3 bulan dan bergaransi bersama Dialogika" name="description">
+  <meta content="Kumpulan promo-promo kelas public speaking Dialogika di bulan ini, JANGAN TERLEWATKAN!" name="description">
   <meta content="public speaking" name="keywords">
 
   <!-- Favicons -->
@@ -17,7 +17,7 @@
   <meta property="og:site_name" content="Kelas Public Speaking" />
   <meta property="og:site" content="dialogika.co/" />
   <meta property="og:title" content="Kelas Public Speaking Jogja | Dialogika" />
-  <meta property="og:description" content="Pelatihan kelas public speaking jogja, selama 1 bulan hingga 3 bulan dan bergaransi bersama Dialogika" />
+  <meta property="og:description" content="Kumpulan promo-promo kursus public speaking Dialogika di bulan ini, JANGAN TERLEWATKAN!" />
   <meta property="og:image" content="assets/img/hero-bg.webp" />
   <meta property="og:url" content="www.dialogika.co/" />
   <meta property="og:type" content="page" />
