--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
     </div><!-- End Breadcrumbs -->
 
     <div class="container ">
-      <div class="alert alert-success alert-dismissible fade show" style="margin-bottom: 20px;margin-top: 20px;" role="alert">
-        <h4 class="alert-heading">Open Registration - Bintaro!</h4>
+      <div class="alert alert-primary alert-dismissible fade show" style="margin-bottom: 20px;margin-top: 20px;" role="alert">
+        <h4 class="alert-heading"><b>Open Registration - Kelas Offline Jogja!</b></h4>
           <hr/>
-          Telah Buka Kelas Private Offline di Tangerang Selatan <b><u><a href="https://dialogika.co/page/kelas-public-speaking-tangsel" target="__blank" class="alert-link">Daftar Sekarang</a></u></b> untuk info lebih lanjut.
+          Telah Buka Kelas Private Offline di Yogyakarta <b><u><a href="https://dialogika.co/program/first-class.html" target="__blank" class="alert-link">Daftar Sekarang</a></u></b> untuk info lebih lanjut.
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
