--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
   <main-footer></main-footer>
   <!-- ======= End Footer & Counter Area ======= -->
 
-  <a href="https://wa.link/dugu63" target="__blank" class="back-to-top d-flex align-items-center justify-content-center"><i class="bx bxl-whatsapp bx-tada"></i></a>
+  <a href="https://wa.link/vwiikc" target="__blank" class="back-to-top d-flex align-items-center justify-content-center"><i class="bx bxl-whatsapp bx-tada"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
