--- a/index.html
+++ b/index.html
@@ -211,8 +211,6 @@
       </div>
     </section><!-- End Breadcrumbs Section -->
 
-    
-
     <div class="container ">
       <div class="alert alert-primary alert-dismissible fade show" style="margin-bottom: 20px;margin-top: 20px;" role="alert">
         <h4 class="alert-heading"><b>Open Registration - Kelas Offline Jogja!</b></h4>
@@ -239,7 +237,7 @@
           </div>
           <div class="row gy-4">
             <div class="col-lg-6 col-md-6 m-b30">
-              <a href="program/first-class.html" class="category-box dlab-box">
+              <a href="../program/first-class.html" class="category-box dlab-box">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://static.vecteezy.com/system/resources/thumbnails/031/036/324/small_2x/african-american-muslim-woman-listens-to-a-lecture-aimed-at-business-training-photo.jpg"
@@ -255,7 +253,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 m-b30">
-              <a href="program/basic-plus.html" class="category-box dlab-box">
+              <a href="../program/basic-plus.html" class="category-box dlab-box">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://static.vecteezy.com/system/resources/previews/001/254/325/non_2x/rear-view-of-asian-businesswoman-working-via-video-conference-free-photo.jpg"
@@ -271,7 +269,7 @@
               </a>
             </div>
             <div class="col-lg-3 col-md-6 m-b30">
-              <a href="program/kids-plus.html" class="category-box dlab-box">
+              <a href="../program/kids-plus.html" class="category-box dlab-box">
                 <div class="dlab-media dlab-img-effect zoom">
                   <img
                     src="https://www.dialogika.co/assets/img/program/kids-plus/kids-plus.webp"
