--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
               <h3>Public Speaker</h3>
               <p class="text-start">Berikut ini adalah list mentor aktif di Dialogika baik mentor kelas online dan offline</p>
               <div class="text-start" style="margin-top:20px;">
-                <a href="mentor/">List Mentor</a>
+                <a href="../mentor/index.html">List Mentor</a>
               </div>
             </div>
           </div>
@@ -628,7 +628,7 @@
                       <span>Mentor Yogyakarta</span>
                       <p>15 tahun berkecimpung di dunia MC Professional dan skala nasional</p>
                       <div class="more-btn" style="margin-top:20px;">
-                        <a href="mentor/fanny.html">More About Her</a>
+                        <a href="../mentor/fanny.html">More About Her</a>
                       </div>
                     </div>
                   </div>
@@ -641,7 +641,7 @@
                       <span>Mentor Online</span>
                       <p>Salah satu mentor online terbaik di Dialogika</p>
                       <div class="more-btn" style="margin-top:20px;">
-                        <a href="mentor/tiya.html">More About Her</a>
+                        <a href="../mentor/tiya.html">More About Her</a>
                       </div>
                     </div>
                   </div>
@@ -654,7 +654,7 @@
                       <span>Mentor Bintaro</span>
                       <p>Berpengalaman lebih dari 15 tahun di dunia public relation dan MC</p>
                       <div class="more-btn" style="margin-top:20px;">
-                        <a href="mentor/pitta.html">More About Her</a>
+                        <a href="../mentor/pitta.html">More About Her</a>
                       </div>
                     </div>
                   </div>
@@ -667,7 +667,7 @@
                       <span>Mentor Online</span>
                       <p>Salah satu mentor dengan background medis dan cukup pakar tentang komunikasi terapeutik</p>
                       <div class="more-btn" style="margin-top:20px;">
-                        <a href="mentor/fajar.html">More About Him</a>
+                        <a href="../mentor/fajar.html">More About Him</a>
                       </div>
                     </div>
                   </div>
