--- a/index.html
+++ b/index.html
@@ -483,11 +483,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjUerRQXePjqRfQdV18KNpbPS4slNXhSflUWVgOTgV0ImQ=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWF1tefWYu4m__YVKgZvNpr7cw_HWeUCwsZD4da1O-J6lrSwdzQ=w75-h75-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Maysarah</h3>
+                        <h3>Nestri Prabandani</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -497,12 +497,7 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Terima Kasih kepada dialogika dan juga mentor saya
-                          yakni Panji Arya, selama belajar di sini selalu di
-                          beri tantangan sehingga membuat saya juga makin banyak
-                          dapat pengalaman dan juga pembelajaran baru untuk
-                          public speaking terlebih kelasnya sangat enjoy,
-                          pokoknya keren
+                          Satu bulan lalu saya mengikuti private class dialogika di Solo dgn tutor Kak Indri. Tutor sangat baik dan ramah. Sabar juga mengajari saya cara public speaking. Dari dialogika saya bisa lebih merasa PD, sudah mengurangi rasa grogi, dan yang paling penting sudah bisa mengatur kalimat dengan baik jika diharuskan <span id="dots">...</span><span id="readMore"> Read More &raquo;</span><span id="moreText">berbicara di dpn umum secara spontan. Sangat2 recommended buat teman2 lain yg ingin belajar mengimprove public speakingnya ❤️</span><span id="readLess"> &laquo; Read Less</span>
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -516,11 +511,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjUEw8d2W9pLUIDTodoFHwwIjhoLrxtkUA0LqFKfnrAmSLBV=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWx25rr5kelvH7tUWG7rP32kkVpWTWMAI4xn14pqxu9djyKfhfNOQ=w75-h75-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Ahda Syifa</h3>
+                        <h3>Ratna Yulianti</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -530,13 +525,8 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          seneng banget bisa ikut kelas disini, kelasnya seru
-                          dan menarik serta mentornya juga asik kebetulan dapet
-                          mentor kak fany dan mentor lain juga pasti ga kalah
-                          serunya. dapet banyak ilmu yang sangat membantu
-                          meningkatkan public speaking dan bikin makin pede,
-                          jadwal kelasnya juga fleksibel. sangat sangat worth it
-                          ikut kelas disini
+                          Baru saja selesai mengikuti class disini, dari sisi umur saya lah yang paling tua hahaha, tapi tidak menyurutkan semangat saya untuk belajar kelas public speaking demi menunjang karir saya. class yang sangat menyenangkan disetiap sesinya, belajar ilmu public speaking yang dapat menambah kepercayaan diri.<span id="dots">...</span><span id="readMore"> Read More &raquo;</span>
+                          <span id="moreText">Disini lah tempat dimana kita tidak malu untuk melakukan kesalahan. trima kasih untuk semua tim dialogika dan khususnya untuk mba fany mentor kami yang selalu ceria dalam membersamai kami selama kami belajar di dialogika, atas ilmu yang diberikan. Semoga semakin sukses  kedepannya</span><span id="readLess"> &laquo; Read Less</span>
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -550,11 +540,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjWRAop2NAYOnPSO-FF8T6ubTHKs4F2JrUoMA3qZ1CqKcw=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjWUENEr-55CljB80GNXKDHyOfFK8qlA-ZTgYZsrFxQuWxbFH2Oa=w75-h75-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Qistina Arifadini</h3>
+                        <h3>Dinara Salsabilla</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -564,14 +554,8 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          Setelah mengikuti kelas public speaking di dialogika
-                          ini saya dapat banyak hal baru, mulai dari cara self
-                          branding, presentasi, dan berlatih menjadi mc. Mentor
-                          saya yaitu kak aditya sangat baik dan selalu
-                          menyebarkan positive vibes. Jadwalnya juga sangat
-                          fleksibel mengikuti dengan jadwal pesertanya. sangat
-                          worth it mengikuti kursus public speaking di
-                          dialogika!
+                          Salah satu tempat kursus public speaking yang bagus sekali, saya mengambil private class online, jadi pertemuannya dilakukan via zoom meeting. Mentor yang mengajar sangat ramah dan seru, membuat saya tidak bosan selama kelas berlangsung, materi dijelaskan dengan sangat baik dan mudah dipahami.<span id="dots">...</span><span id="readMore"> Read More &raquo;</span><span id="moreText"> Selain itu, mentor juga selalu mendengarkan kesulitan saya terkait public speaking.
+                          Terima kasih dialogika dan miss Malla yang sudah memberikan saya ilmu selama 7 kali pertemuan kemarin 🙏🏻🙏🏻</span><span id="readLess"> &laquo; Read Less</span>
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
@@ -585,11 +569,11 @@
                     <div class="testimonial-wrap">
                       <div class="testimonial-item">
                         <img
-                          src="https://lh3.googleusercontent.com/a-/ALV-UjVKsGynC7YR1LttqNOp1kT7KiE7j3u5qDE79oy7bZzgJls=w72-h72-p-rp-mo-br100"
+                          src="https://lh3.googleusercontent.com/a-/ALV-UjXdLXa4DjiqQXM-3Xjc7Wu_5P1IS0klsTQcC-RVDBtBEgy7X_k4=w75-h75-p-rp-mo-br100"
                           class="testimonial-img"
                           alt=""
                         />
-                        <h3>Annissa Ibtisamah</h3>
+                        <h3>Hatta Saifa</h3>
                         <h4>
                           <i class="bi bi-star-fill"></i>
                           <i class="bi bi-star-fill"></i>
@@ -599,9 +583,9 @@
                         </h4>
                         <p>
                           <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                          tempat yang cocok belajar public speaking bagi pemula,
-                          mentornya ramah dan tidak membosankan. sangat
-                          recommended!! sukses selalu dialogika
+                          Pub Speaking Class yang bisa dihadiri offline di Jogja, saya menjadi peserta kelas reguler di sini dan pengalaman saya selama menjadi peserta kelas alhamdulillah dipertemukan dengan kak vanny as a coach/mentor yang menyenangkan dan selalu antusias dalam berbagi ilmunya sebagai seorang expertise pub speaker. <span id="dots">...</span><span id="readMore"> Read More &raquo;</span><span id="moreText">Para pegawai yang ada di daheim pun  ramah-ramah juga dalam menyambut tiap peserta kelas. Overall menyenangkan dan membantu juga dalam memperdalam ilmu pub speaking dengan guarantee nya yang bisa tetap mengikuti kelas meskipun sudah dinyatakan lulus.
+                          Sedikit saran kalau ada yg perlu diperbaiki adalah mungkin pengadaaan kelas terpisah dengan ruang kerja para karyawan intern supaya para peserta kelas bisa lebih maksimal dalam menyerap ilmu yang disampaikan, juga responsibilitas admin kelas dalam menanggapi peserta kelas bisa lebih ditingkatkan, but overall sudah sangat cukup membantuu
+                          Thanks and good job buat kak vanny dan kaka-kaka Dialogika semuanyaa</span><span id="readLess"> &laquo; Read Less</span>
                           <i
                             class="bx bxs-quote-alt-right quote-icon-right"
                           ></i>
