--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <link href="assets/part/scrolling-zoom/style.css" rel="stylesheet" />
 
     <link href="assets/part/quickstart-service/style.css" rel="stylesheet" />
+    <link href="assets/part/read-more/read-more_less.css" rel="stylesheet" />
 
     <!--  CDN  -->
     <script src="https://kit.fontawesome.com/cdde75dea2.js" crossorigin="anonymous"></script>
